--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://DESKTOP-244LKTT\\SQLEXPRESS;databaseName=Bike;trustServerCertificate=true;encrypt=true;
+spring.datasource.url=jdbc:sqlserver://localhost\\SQLEXPRESS;databaseName=Bike;trustServerCertificate=true;encrypt=true;
 spring.datasource.username=bike
 spring.datasource.password=bikeapp
